add animation manneke pis

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="background__intro">
         <section class="intro">
           <img class="intro__logoMim" src="./assets/mobile/intro/logo-MIM.png"
-            alt="">
+            alt="Logo mim">
           <div class="intro__body">
             <h1 class="intro__title">Welcome <span class="intro__title--small">to</span></h1>
             <p class="intro__title">the
@@ -21,7 +21,7 @@
                   srcset="/assets/ipad/love-story.png">
                 <img class="loveStory"
                   src="./assets/mobile/intro/love-story.png"
-                  alt="">
+                  alt="love story image">
               </picture>
             </p>
           </div>
@@ -33,7 +33,7 @@
                 srcset="/assets/desktop/adolphe-sax.png">
               <img class="intro__img"
                 src="./assets/mobile/intro/adolphe-sax.png"
-                alt="">
+                alt="adolphe sax">
             </picture>
           </div>
 
@@ -70,20 +70,19 @@
             <h1 class="sectionTwo__title title__date">1814 - 1894</h1>
           </div>
           <img class="sectionTwo__adolphe"
-            src="./assets/mobile/sectionTwo/adolphe-sax-red.png" alt="">
+            src="./assets/mobile/sectionTwo/adolphe-sax-red.png" alt="Adolphe sax red image">
           <div class="sectionTwo__text">
-            <img class="sectionTwo__miniArrowOne" src="./assets/mobile/sectionTwo/mini-arrow.png" alt="">
+            <img class="sectionTwo__miniArrowOne" src="./assets/mobile/sectionTwo/mini-arrow.png" alt="Mini arrow">
             <p class="sectionTwo__p">I am passionned for music and mechanics, and spent my entire life
               experimenting with different instruments.</p>
           </div>
           <div class="sectionTwo__text">
-            <img class="sectionTwo__miniArrowTwo" src="./assets/mobile/sectionTwo/mini-arrow.png" alt="">
+            <img class="sectionTwo__miniArrowTwo" src="./assets/mobile/sectionTwo/mini-arrow.png" alt="mini arrow">
             <p class="sectionTwo__p">My hometown is Dinant in Belgium and I’m the creator of the
               Saxophone. </p>
           </div>
-          <img class="sectionTwo__secretButton" src="./assets/mobile/sectionTwo/secret-button.png" alt="">
-          <!-- <img class="sectionTwo__mannekePis"
-              src="./assets/mobile/sectionTwo/manneke-pis.png" alt=""> -->
+          <img class="sectionTwo__mannekePis" src="./assets/mobile/sectionTwo/manneke-pis.png" alt="manneke-pis">
+          <img class="sectionTwo__secretButton" src="./assets/mobile/sectionTwo/secret-button.png" alt="secret button">
         </div>
       </section>
       <div class="cutted__background"></div>
@@ -91,12 +90,14 @@
       <!-- Adolphe and Sapphire -->
       <div class="background__sectionThree">
         <section class="sectionThree">
+          <h1>Adolphe Sax</h1>
           <img class="head__adolphe"
-            src="./assets/mobile/adolph-and-sapphire/head-adolphe.png" alt="">
+            src="./assets/mobile/adolph-and-sapphire/head-adolphe.png" alt="adolphes head">
           <img class="flowers"
-            src="./assets/mobile/adolph-and-sapphire/heart-flowers.png" alt="">
+            src="./assets/mobile/adolph-and-sapphire/heart-flowers.png" alt="flowers">
           <img class="saxophone"
-            src="./assets/mobile/adolph-and-sapphire/saxophone.png" alt="">
+            src="./assets/mobile/adolph-and-sapphire/saxophone.png" alt="saxophone">
+            <h1>Sapphire Saxophone</h1>
         </section>
       </div>
 
