--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <p class="intro__title">the
               <picture>
                 <source media="(max-width: 390px)"
-                  srcset="/assets/mobile/intro/love-story.png">
+                  srcset="./assets/mobile/intro/love-story.png">
                 <source media="(min-width: 834px)"
-                  srcset="/assets/ipad/love-story.png">
+                  srcset="./assets/ipad/love-story.png">
                 <img class="loveStory"
                   src="./assets/mobile/intro/love-story.png"
                   alt="love story image">
@@ -28,9 +28,9 @@
           <div class="intro__adolpheSax">
             <picture>
               <source media="(min-width: 834px) and (max-width: 1512px)"
-                srcset="/assets/ipad/adolphe-sax.png">
+                srcset="./assets/ipad/adolphe-sax.png">
               <source media="(min-width: 1512px)"
-                srcset="/assets/desktop/adolphe-sax.png">
+                srcset="./assets/desktop/adolphe-sax.png">
               <img class="intro__img"
                 src="./assets/mobile/intro/adolphe-sax.png"
                 alt="adolphe sax">
