Add styling section 3

--- a/index.html
+++ b/index.html
@@ -89,16 +89,18 @@
 
       <!-- Adolphe and Sapphire -->
       <div class="background__sectionThree">
-        <h1>Adolphe Sax</h1>
         <section class="sectionThree">
-          <img class="head__adolphe"
-            src="./assets/mobile/adolph-and-sapphire/head-adolphe.png" alt="adolphes head">
-          <img class="flowers"
-            src="./assets/mobile/adolph-and-sapphire/heart-flowers.png" alt="flowers">
-          <img class="saxophone"
-            src="./assets/mobile/adolph-and-sapphire/saxophone.png" alt="saxophone">
+          <h1>Adolphe Sax</h1>
+          <div class="sectionThree__images">
+            <img class="head__adolphe"
+              src="./assets/mobile/adolph-and-sapphire/head-adolphe.png" alt="adolphes head">
+            <img class="flowers"
+              src="./assets/mobile/adolph-and-sapphire/heart-flowers.png" alt="flowers">
+            <img class="saxophone"
+              src="./assets/mobile/adolph-and-sapphire/saxophone.png" alt="saxophone">
+          </div>
+          <h1>Sapphire</h1>
           </section>
-          <h1>Sapphire Saxophone</h1>
       </div>
 
       <!-- Vertical scroll -->
