--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <!-- Adolphe and Sapphire -->
       <div class="background__sectionThree">
         <section class="sectionThree">
-          <h1>Adolphe Sax</h1>
+          <h1 class="sectionThree__adolpheSax">Adolphe Sax</h1>
           <div class="sectionThree__images">
             <img class="head__adolphe"
               src="./assets/mobile/adolph-and-sapphire/head-adolphe.png" alt="adolphes head">
@@ -99,7 +99,7 @@
             <img class="saxophone"
               src="./assets/mobile/adolph-and-sapphire/saxophone.png" alt="saxophone">
           </div>
-          <h1>Sapphire</h1>
+          <h1 class="sectionThree__sapphire">Sapphire</h1>
           </section>
       </div>
 
