Adding animation for section features

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
   </head>
   <body>
     <main>
+      <div id="mouse-circle"></div>
       <div class="background__intro">
         <section class="intro">
           <img class="intro__logoMim" src="./assets/mobile/intro/logo-MIM.png"
             alt="Logo mim">
           <div class="intro__body">
             <h1 class="intro__title">Welcome <span class="intro__title--small">to</span></h1>
-            <p class="intro__title">the
+            <h1 class="intro__title">the
               <picture>
                 <source media="(max-width: 390px)"
                   srcset="./assets/mobile/intro/love-story.png">
@@ -23,7 +24,7 @@
                   src="./assets/mobile/intro/love-story.png"
                   alt="love story image">
               </picture>
-            </p>
+            </h1>
           </div>
           <div class="intro__adolpheSax">
             <picture>
@@ -70,19 +71,27 @@
             <h1 class="sectionTwo__title title__date">1814 - 1894</h1>
           </div>
           <img class="sectionTwo__adolphe"
-            src="./assets/mobile/sectionTwo/adolphe-sax-red.png" alt="Adolphe sax red image">
+            src="./assets/mobile/sectionTwo/adolphe-sax-red.png" alt="Adolphe
+            sax red image">
           <div class="sectionTwo__text">
-            <img class="sectionTwo__miniArrowOne" src="./assets/mobile/sectionTwo/mini-arrow.png" alt="Mini arrow">
-            <p class="sectionTwo__p">I am passionned for music and mechanics, and spent my entire life
+            <img class="sectionTwo__miniArrowOne"
+              src="./assets/mobile/sectionTwo/mini-arrow.png" alt="Mini arrow">
+            <p class="sectionTwo__p">I am passionned for music and mechanics,
+              and spent my entire life
               experimenting with different instruments.</p>
           </div>
           <div class="sectionTwo__text">
-            <img class="sectionTwo__miniArrowTwo" src="./assets/mobile/sectionTwo/mini-arrow.png" alt="mini arrow">
-            <p class="sectionTwo__p">My hometown is Dinant in Belgium and I’m the creator of the
+            <img class="sectionTwo__miniArrowTwo"
+              src="./assets/mobile/sectionTwo/mini-arrow.png" alt="mini arrow">
+            <p class="sectionTwo__p">My hometown is Dinant in Belgium and I’m
+              the creator of the
               Saxophone. </p>
           </div>
-          <img class="sectionTwo__mannekePis" src="./assets/mobile/sectionTwo/manneke-pis.png" alt="manneke-pis">
-          <img class="sectionTwo__secretButton" src="./assets/mobile/sectionTwo/secret-button.png" alt="secret button">
+          <img class="sectionTwo__mannekePis"
+            src="./assets/mobile/sectionTwo/manneke-pis.png" alt="manneke-pis">
+          <img class="sectionTwo__secretButton"
+            src="./assets/mobile/sectionTwo/secret-button.png" alt="secret
+            button">
         </div>
       </section>
       <div class="cutted__background"></div>
@@ -93,15 +102,19 @@
           <h1 class="sectionThree__adolpheSax">Adolphe Sax</h1>
           <div class="sectionThree__images">
             <img class="head__adolphe"
-              src="./assets/mobile/adolph-and-sapphire/head-adolphe.png" alt="adolphes head">
+              src="./assets/mobile/adolph-and-sapphire/head-adolphe.png"
+              alt="adolphes head">
             <img class="flowers"
-              src="./assets/mobile/adolph-and-sapphire/heart-flowers.png" alt="flowers">
+              src="./assets/mobile/adolph-and-sapphire/heart-flowers.png"
+              alt="flowers">
             <img class="saxophone"
-              src="./assets/mobile/adolph-and-sapphire/saxophone.png" alt="saxophone">
+              src="./assets/mobile/adolph-and-sapphire/saxophone.png"
+              alt="saxophone">
           </div>
           <h1 class="sectionThree__sapphire">Sapphire</h1>
-          </section>
+        </section>
       </div>
+      <div class="cutted__background__up"></div>
 
       <!-- Vertical scroll -->
       <section class="verticalScroll">
@@ -124,22 +137,22 @@
             </div>
             <img
               class="image1"
-              src="https://upload.wikimedia.org/wikipedia/commons/4/4b/La_Tour_Eiffel_vue_de_la_Tour_Saint-Jacques%2C_Paris_ao%C3%BBt_2014_%282%29.jpg"
+              src="./assets/mobile/verticalScroll/vertical-image-1.png"
               alt="Image of me travelling"
               />
             <img
               class="image2"
-              src="https://burst.shopifycdn.com/photos/paris-streets.jpg?width=925&format=pjpg&exif=0&iptc=0"
+              src="./assets/mobile/verticalScroll/vertical-image-2.png"
               alt="Secretspot"
               />
             <img
               class="image3"
-              src="https://media.gq.com/photos/5d6e9b9ff535760008d2cdae/master/w_3105,h_4000,c_limit/tyshawn-jones-supreme-being-gqstyle-fall-02.jpg"
+              src="./assets/mobile/verticalScroll/vertical-image-1.png"
               alt="Camping place"
               />
             <img
               class="image4"
-              src="https://imageio.forbes.com/specials-images/imageserve/60cb60f2c6e55bb1939c2a4d/Tyshawn-Jones-announces-release-of-new-adidas-signature-pro-model-skate-shoe-Tyshawn/960x0.jpg?format=jpg&width=960"
+              src="./assets/mobile/verticalScroll/vertical-image-1.png"
               alt="Night life in Sweden"
               />
           </div>
@@ -153,7 +166,7 @@
               One day, I walked through the
               streets of Paris in the ghetto
               neighbourhood I saw Sapphire. She was smoking a big
-              sigar and she captivated me with her elegant style
+              cigar and she captivated me with her elegant style
               and smooth, mellow voice.
             </h2>
           </div>
@@ -243,12 +256,14 @@
       <div class="background__features">
         <section class="features">
           <div class="features__love">
-            <p>The</p>
-            <p>features</p>
-            <p>Adolphe <img class="loves"
-                src="./assets/mobile/features/loves.png" alt=""> </p>
+            <p class="features__love__the">The</p>
+            <p class="features__love__features">features</p>
+            <p class="features__love__adolphe">Adolphe</p>
+            <img class="loves"
+              src="./assets/mobile/features/loves.png" alt="">
           </div>
-          <p>He fell in love with the soul of Sapphire, but not only the soul.
+          <p class="features__text">He fell in love with the soul of Sapphire,
+            but not only the soul.
             Also the way she looks!</p>
           <img src="./assets/mobile/features/sapphire.png" alt="">
         </section>
