Fix animation section features

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   </head>
   <body>
     <main>
-      <div id="mouse-circle"></div>
       <div class="background__intro">
         <section class="intro">
           <img class="intro__logoMim" src="./assets/mobile/intro/logo-MIM.png"
@@ -265,7 +264,7 @@
           <p class="features__text">He fell in love with the soul of Sapphire,
             but not only the soul.
             Also the way she looks!</p>
-          <img src="./assets/mobile/features/sapphire.png" alt="">
+          <img class="features__sapphire" src="./assets/mobile/features/sapphire.png" alt="">
         </section>
       </div>
 
