--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   </head>
   <body>
     <main>
-      <div class="background__intro">
         <section class="intro">
-          <img class="intro__logoMim" src="./assets/mobile/intro/logo-MIM.png"
+          <img loading="lazy" class="intro__logoMim" src="./assets/mobile/intro/logo-MIM.png"
             alt="Logo mim">
           <div class="intro__body">
             <h1 class="intro__title">Welcome <span class="intro__title--small">to</span></h1>
@@ -19,7 +18,7 @@
                   srcset="./assets/mobile/intro/love-story.png">
                 <source media="(min-width: 834px)"
                   srcset="./assets/ipad/love-story.png">
-                <img class="loveStory"
+                <img loading="lazy" class="loveStory"
                   src="./assets/mobile/intro/love-story.png"
                   alt="love story image">
               </picture>
@@ -31,7 +30,7 @@
                 srcset="./assets/ipad/adolphe-sax.png">
               <source media="(min-width: 1512px)"
                 srcset="./assets/desktop/adolphe-sax.png">
-              <img class="intro__img"
+              <img loading="lazy" class="intro__img"
                 src="./assets/mobile/intro/adolphe-sax.png"
                 alt="adolphe sax">
             </picture>
@@ -43,19 +42,19 @@
           <p class="intro__text--scroll">Scroll down for the full story</p>
 
           <div class="intro__arrows">
-            <img class="arrows arrow1"
+            <img loading="lazy" class="arrows arrow1"
               src="./assets/mobile/intro/yellow-arrow.png"
               alt="Yellow love
               heart" />
-            <img class="arrows arrow2"
+            <img loading="lazy" loading="lazy" class="arrows arrow2"
               src="./assets/mobile/intro/yellow-arrow.png"
               alt="Yellow love
               heart" />
-            <img class="arrows arrow3"
+            <img loading="lazy" class="arrows arrow3"
               src="./assets/mobile/intro/yellow-arrow.png"
               alt="Yellow love
               heart" />
-            <img class="arrows arrow4"
+            <img loading="lazy" class="arrows arrow4"
               src="./assets/mobile/intro/yellow-arrow.png"
               alt="Yellow love
               heart" />
@@ -63,35 +62,33 @@
         </section>
       </div>
       <!-- SectionTwo - About AdolpheSax -->
-      <section class="background__sectionTwo">
-        <div class="sectionTwo">
+      <section class="sectionTwo">
           <div>
             <h1 class="sectionTwo__title title__name">Adolphe Sax</h1>
             <h1 class="sectionTwo__title title__date">1814 - 1894</h1>
           </div>
-          <img class="sectionTwo__adolphe"
+          <img loading="lazy" class="sectionTwo__adolphe"
             src="./assets/mobile/sectionTwo/adolphe-sax-red.png" alt="Adolphe
             sax red image">
           <div class="sectionTwo__text">
-            <img class="sectionTwo__miniArrowOne"
+            <img loading="lazy" class="sectionTwo__miniArrowOne"
               src="./assets/mobile/sectionTwo/mini-arrow.png" alt="Mini arrow">
             <p class="sectionTwo__p">I am passionned for music and mechanics,
               and spent my entire life
               experimenting with different instruments.</p>
           </div>
           <div class="sectionTwo__text">
-            <img class="sectionTwo__miniArrowTwo"
+            <img loading="lazy" class="sectionTwo__miniArrowTwo"
               src="./assets/mobile/sectionTwo/mini-arrow.png" alt="mini arrow">
             <p class="sectionTwo__p">My hometown is Dinant in Belgium and I’m
               the creator of the
               Saxophone. </p>
           </div>
-          <img class="sectionTwo__mannekePis"
+          <img loading="lazy" class="sectionTwo__mannekePis"
             src="./assets/mobile/sectionTwo/manneke-pis.png" alt="manneke-pis">
-          <img class="sectionTwo__secretButton"
+          <img loading="lazy" class="sectionTwo__secretButton"
             src="./assets/mobile/sectionTwo/secret-button.png" alt="secret
             button">
-        </div>
       </section>
       <div class="cutted__background"></div>
 
@@ -100,13 +97,13 @@
         <section class="sectionThree">
           <h1 class="sectionThree__adolpheSax">Adolphe Sax</h1>
           <div class="sectionThree__images">
-            <img class="head__adolphe"
+            <img loading="lazy" class="head__adolphe"
               src="./assets/mobile/adolph-and-sapphire/head-adolphe.png"
               alt="adolphes head">
-            <img class="flowers"
+            <img loading="lazy" class="flowers"
               src="./assets/mobile/adolph-and-sapphire/heart-flowers.png"
               alt="flowers">
-            <img class="saxophone"
+            <img loading="lazy" class="saxophone"
               src="./assets/mobile/adolph-and-sapphire/saxophone.png"
               alt="saxophone">
           </div>
@@ -134,22 +131,22 @@
                 15
               </div>
             </div>
-            <img
+            <img loading="lazy"
               class="image1"
               src="./assets/mobile/verticalScroll/vertical-image-1.png"
               alt="Image of me travelling"
               />
-            <img
+            <img loading="lazy"
               class="image2"
               src="./assets/mobile/verticalScroll/vertical-image-2.png"
               alt="Secretspot"
               />
-            <img
+            <img loading="lazy"
               class="image3"
               src="./assets/mobile/verticalScroll/vertical-image-1.png"
               alt="Camping place"
               />
-            <img
+            <img loading="lazy"
               class="image4"
               src="./assets/mobile/verticalScroll/vertical-image-1.png"
               alt="Night life in Sweden"
@@ -258,27 +255,50 @@
             <p class="features__love__the">The</p>
             <p class="features__love__features">features</p>
             <p class="features__love__adolphe">Adolphe</p>
-            <img class="loves"
+            <img loading="lazy" class="loves"
               src="./assets/mobile/features/loves.png" alt="">
           </div>
           <p class="features__text">He fell in love with the soul of Sapphire,
             but not only the soul.
             Also the way she looks!</p>
-          <img class="features__sapphire" src="./assets/mobile/features/sapphire.png" alt="">
+          <img loading="lazy" class="features__sapphire"
+            src="./assets/mobile/features/sapphire.png" alt="">
         </section>
       </div>
 
-
       <!-- Saxophone features -->
       <section class="background__sapphire">
+        <!-- <img class="sapphire__title"src="./assets/mobile/sapphire/sapphire-title.png" alt=""> -->
         <div class="sapphire">
-          <img class="sapphire__title"
-            src="./assets/mobile/sapphire/sapphire-title.png" alt="">
-          <p>Mouth</p>
+          <div class="sapphire__text">
+            <p>Mouth</p>
+            <p>Her mouth piece because she has really cute lips but her kisses
+              are horrible. </p>
+          </div>
+          <div>
+            <p>Body</p>
+            <p>Her body is so fit you can see all her muscles ...</p>
+          </div>
+          <div>
+            <p>Right hand palm keys</p>
+            <p>Her right hand is smaller then her left hand, so she uses her
+              right hand to help me out ...</p>
+          </div>
+          <div class="sapphire__saxophone"></div>
         </div>
-        <img class="sapphire__saxophone"
-          src="./assets/mobile/sapphire/sapphire.png" alt="">
       </section>
+
+    <!-- Family -->
+        <section class="family">
+          <p>A few year went by</p>
+          <div class="family__title">
+            <p class="family__title--1">So they</p>
+            <p class="family__title--2">Decide <span>to</span> make</p>
+            <p class="family__title--3">A <span>Family</span></p>
+          </div>
+          <p class="features__text">Four beautifull kids</p>
+        </section>
+      </div>
     </main>
     <script type="module" src="./js/main.js"></script>
   </body>
