Intro page fonts and images responsive

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <source media="(max-width: 390px)"
                   srcset="./assets/mobile/intro/love-story.png">
                 <source media="(min-width: 834px)"
-                  srcset="./assets/ipad/love-story.png">
+                  srcset="./assets/ipad/intro/love-story.png">
                 <img loading="lazy" class="loveStory"
                   src="./assets/mobile/intro/love-story.png"
                   alt="love story image">
@@ -26,10 +26,12 @@
           </div>
           <div class="intro__adolpheSax">
             <picture>
-              <source media="(min-width: 834px) and (max-width: 1512px)"
-                srcset="./assets/ipad/adolphe-sax.png">
+               <source media="(max-width: 390px)"
+                  srcset="./assets/mobile/intro/adolphe-sax.png">
+              <source media="(min-width: 834px)"
+                srcset="./assets/ipad/intro/adolphe-sax.png">
               <source media="(min-width: 1512px)"
-                srcset="./assets/desktop/adolphe-sax.png">
+                srcset="./assets/desktop/intro/adolphe-sax.png">
               <img loading="lazy" class="intro__img"
                 src="./assets/mobile/intro/adolphe-sax.png"
                 alt="adolphe sax">
@@ -261,8 +263,7 @@
           <p class="features__text">He fell in love with the soul of Sapphire,
             but not only the soul.
             Also the way she looks!</p>
-          <img loading="lazy" class="features__sapphire"
-            src="./assets/mobile/features/sapphire.png" alt="">
+          <img loading="lazy" class="features__sapphire" src="./assets/mobile/features/sapphire.png" alt="">
         </section>
       </div>
 
@@ -290,11 +291,11 @@
 
     <!-- Family -->
         <section class="family">
-          <p>A few year went by</p>
+          <p>A few year went by ...</p>
           <div class="family__title">
-            <p class="family__title--1">So they</p>
-            <p class="family__title--2">Decide <span>to</span> make</p>
-            <p class="family__title--3">A <span>Family</span></p>
+            <p class="family__title__soThey">So they</p>
+            <p class="family__title__decide">decide <span class="span__to">to</span> make</p>
+            <p class="family__title__family">A <span class="span__family">Family</span></p>
           </div>
           <p class="features__text">Four beautifull kids</p>
         </section>
