Test responsive desktop section 2

--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
       </div>
       <!-- SectionTwo - About AdolpheSax -->
       <section class="sectionTwo">
-          <div>
-            <h1 class="sectionTwo__title title__name">Adolphe Sax</h1>
-            <h1 class="sectionTwo__title title__date">1814 - 1894</h1>
+          <div class="sectionTwo__title">
+            <h1 class="title__name">Adolphe Sax</h1>
+            <h1 class="title__date">1814 - 1894</h1>
           </div>
           <picture>
              <source media="(max-width: 390px)"
-                  srcset="./assets/mobile/intro/adolphe-sax.png">
-              <source media="(min-width: 834px)"
+                  srcset="./assets/mobile/sectionTwo/adolphe-sax-red.png">
+              <source media="(max-width: 834px)"
                 srcset="./assets/ipad/sectionTwo/adolphe-sax-red.png">
               <source media="(min-width: 1512px)"
-                srcset="./assets/desktop/sectionTwo/adolphe-sax.png">
+                srcset="./assets/desktop/sectionTwo/adolphe-sax-red.png">
               <img loading="lazy" class="sectionTwo__adolphe"
                 src="./assets/mobile/sectionTwo/adolphe-sax-red.png"
                 alt="adolphe sax red images">
