Fix font ala champ

--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
   </head>
   <body>
     <main>
-      <div>
         <img class="sapphire__song" src="./assets/mobile/features/sapphire.png" alt="">
-        <audio class="titanic__song" src="./assets/song/titanic.mp3"></audio>
-      </div>
+        <audio class="titanic__song" src="./public/song/titanic.mp3"></audio>
       <audio src=""></audio>
         <section class="intro">
           <img loading="lazy" class="intro__logoMim" src="./assets/mobile/intro/logo-MIM.png"
