--- a/index.html
+++ b/index.html
@@ -337,25 +337,25 @@
 
       <!-- Saxophone features -->
       <section class="sapphire">
-        <div class="item--1">
+        <div class="sapphire__mouth">
           <p>Mouth Piece</p>
           <span id="mouth__piece--click">
             <i class="fa fa-plus-circle fa-2x" aria-hidden="true"> </i
           ></span>
         </div>
-        <div class="item--2">
+        <div class="sapphire__body">
           <p>Body</p>
           <i class="fa fa-plus-circle fa-2x" aria-hidden="true"></i>
         </div>
-        <div class="item--3">
+        <div class="sapphire__rightHand">
           <p>Right hand palm keys</p>
           <i class="fa fa-plus-circle fa-2x" aria-hidden="true"></i>
         </div>
-        <div class="item--4">
+        <div class="sapphire__leftHand">
           <i class="fa fa-plus-circle fa-2x" aria-hidden="true"></i>
           <p>Left hand palm keys</p>
         </div>
-        <div class="item--5">
+        <div class="sapphire__bell">
           <i class="fa fa-plus-circle fa-2x" aria-hidden="true"> </i>
           <p>Bell</p>
         </div>
