Add click function show and close

--- a/index.html
+++ b/index.html
@@ -361,7 +361,11 @@
         </div>
       </section>
 
+      <!-- Papers -->
       <div class="sapphire__mouth--info">
+        <div class="closeBtn">
+          <i class="fa fa-times fa-3x closeIcon"  aria-hidden="true"></i>
+        </div>
         <div class="sapphire__mouth__text">
           <h1 class="sapphire__h1">Mouth piece</h1>
           <p>
@@ -370,6 +374,7 @@
             connects me and her. When we kiss shapes the sound she create.
           </p>
         </div>
+        <div class="star"><i class="fa fa-asterisk fa-4x" aria-hidden="true"></i></div>
       </div>
 
       <!-- Family -->
