Adding body paper card and styling

--- a/index.html
+++ b/index.html
@@ -361,10 +361,10 @@
         </div>
       </section>
 
-      <!-- Papers -->
+      <!-- Paper 1 - MouthInfo -->
       <div class="sapphire__mouth--info">
-        <div class="closeBtn">
-          <i class="fa fa-times fa-3x closeIcon"  aria-hidden="true"></i>
+        <div class="closeBtnMouth">
+          <i class="fa fa-times fa-3x closeIcon" aria-hidden="true"></i>
         </div>
         <div class="sapphire__mouth__text">
           <h1 class="sapphire__h1">Mouth piece</h1>
@@ -374,7 +374,27 @@
             connects me and her. When we kiss shapes the sound she create.
           </p>
         </div>
-        <div class="star"><i class="fa fa-asterisk fa-4x" aria-hidden="true"></i></div>
+        <div class="star">
+          <i class="fa fa-asterisk fa-4x" aria-hidden="true"></i>
+        </div>
+      </div>
+
+      <!-- Paper 1 - bodyInfo -->
+      <div class="sapphire__body--info">
+        <div class="closeBtnBody">
+          <i class="fa fa-times fa-3x closeIcon" aria-hidden="true"></i>
+        </div>
+        <div class="sapphire__body__text">
+          <h1 class="sapphire__h1">Body</h1>
+          <p>
+            Her body is so fit you can see all her muscles ... Her body is so
+            fit you can see all her muscles ... It amplifies the sound and
+            creates the rich, warm feeling that Sapphire gives me.
+          </p>
+        </div>
+        <div class="star">
+          <i class="fa fa-asterisk fa-4x" aria-hidden="true"></i>
+        </div>
       </div>
 
       <!-- Family -->
