Add javascript for sapphire__body onclick to get information and close onclick

--- a/index.html
+++ b/index.html
@@ -340,13 +340,16 @@
         <div class="sapphire__mouth">
           <p>Mouth Piece</p>
           <span id="mouth__piece--click">
-            <i class="fa fa-plus-circle fa-2x" aria-hidden="true"> </i
-          ></span>
+            <i class="fa fa-plus-circle fa-2x" aria-hidden="true"> </i> </span>
         </div>
+
         <div class="sapphire__body">
           <p>Body</p>
-          <i class="fa fa-plus-circle fa-2x" aria-hidden="true"></i>
+          <span id="body--click">
+            <i class="fa fa-plus-circle fa-2x" aria-hidden="true"></i>
+          </span>
         </div>
+
         <div class="sapphire__rightHand">
           <p>Right hand palm keys</p>
           <i class="fa fa-plus-circle fa-2x" aria-hidden="true"></i>
@@ -363,10 +366,10 @@
 
       <!-- Paper 1 - MouthInfo -->
       <div class="sapphire__mouth--info">
-        <div class="closeBtnMouth">
-          <i class="fa fa-times fa-3x closeIcon" aria-hidden="true"></i>
+        <div class="mouthCloseBtn">
+          <i class="fa fa-times fa-3x mouthCloseIcon" aria-hidden="true"></i>
         </div>
-        <div class="sapphire__mouth__text">
+        <div class="sapphire__text">
           <h1 class="sapphire__h1">Mouth piece</h1>
           <p>
             Her mouth piece because she has really cute lips but her kisses are
@@ -379,12 +382,12 @@
         </div>
       </div>
 
-      <!-- Paper 1 - bodyInfo -->
+      <!-- Paper 3 - bodyInfo -->
       <div class="sapphire__body--info">
-        <div class="closeBtnBody">
-          <i class="fa fa-times fa-3x closeIcon" aria-hidden="true"></i>
+        <div class="bodyCloseBtn">
+          <i class="fa fa-times fa-3x bodyCloseIcon" aria-hidden="true"></i>
         </div>
-        <div class="sapphire__body__text">
+        <div class="sapphire__text">
           <h1 class="sapphire__h1">Body</h1>
           <p>
             Her body is so fit you can see all her muscles ... Her body is so
