--- a/index.html
+++ b/index.html
@@ -340,7 +340,8 @@
         <div class="sapphire__mouth">
           <p>Mouth Piece</p>
           <span id="mouth__piece--click">
-            <i class="fa fa-plus-circle fa-2x" aria-hidden="true"> </i> </span>
+            <i class="fa fa-plus-circle fa-2x" aria-hidden="true"> </i>
+          </span>
         </div>
 
         <div class="sapphire__body">
@@ -354,8 +355,11 @@
           <p>Right hand palm keys</p>
           <i class="fa fa-plus-circle fa-2x" aria-hidden="true"></i>
         </div>
+
         <div class="sapphire__leftHand">
-          <i class="fa fa-plus-circle fa-2x" aria-hidden="true"></i>
+          <span id="leftHand--click">
+            <i class="fa fa-plus-circle fa-2x" aria-hidden="true"></i>
+          </span>
           <p>Left hand palm keys</p>
         </div>
         <div class="sapphire__bell">
@@ -382,6 +386,23 @@
         </div>
       </div>
 
+      <!-- Paper 2 - Left hand palm keys -->
+      <div class="sapphire__leftHand--info">
+        <div class="leftHandCloseBtn">
+          <i class="fa fa-times fa-3x leftHandCloseIcon" aria-hidden="true"></i>
+        </div>
+        <div class="sapphire__text">
+          <h1 class="sapphire__h1">Left hand <br> <span class="sapphire__smallText">palm keys</span></h1>
+          <p>
+            Her left hand is so big she can cover my face with it. These keys
+            are used to play notes in the low register.
+          </p>
+        </div>
+        <div class="star">
+          <i class="fa fa-asterisk fa-4x" aria-hidden="true"></i>
+        </div>
+      </div>
+      
       <!-- Paper 3 - bodyInfo -->
       <div class="sapphire__body--info">
         <div class="bodyCloseBtn">
