Add card right hand palm keys and style it

--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@
 
       <!-- Saxophone features -->
       <section class="sapphire">
+        <!-- Mouth -->
         <div class="sapphire__mouth">
           <p>Mouth Piece</p>
           <span id="mouth__piece--click">
@@ -344,6 +345,7 @@
           </span>
         </div>
 
+        <!-- Body -->
         <div class="sapphire__body">
           <p>Body</p>
           <span id="body--click">
@@ -351,17 +353,23 @@
           </span>
         </div>
 
-        <div class="sapphire__rightHand">
-          <p>Right hand palm keys</p>
-          <i class="fa fa-plus-circle fa-2x" aria-hidden="true"></i>
-        </div>
-
+        <!-- Left hand palm keys -->
         <div class="sapphire__leftHand">
           <span id="leftHand--click">
             <i class="fa fa-plus-circle fa-2x" aria-hidden="true"></i>
+            <p>Left hand palm keys</p>
           </span>
-          <p>Left hand palm keys</p>
         </div>
+
+        <!-- Right hand palm keys -->
+        <div class="sapphire__rightHand">
+          <p>Right hand palm keys</p>
+          <span class="rightHand--click">
+            <i class="fa fa-plus-circle fa-2x" aria-hidden="true"></i>
+          </span>
+        </div>
+
+        <!-- Bell -->
         <div class="sapphire__bell">
           <i class="fa fa-plus-circle fa-2x" aria-hidden="true"> </i>
           <p>Bell</p>
@@ -392,7 +400,10 @@
           <i class="fa fa-times fa-3x leftHandCloseIcon" aria-hidden="true"></i>
         </div>
         <div class="sapphire__text">
-          <h1 class="sapphire__h1">Left hand <br> <span class="sapphire__smallText">palm keys</span></h1>
+          <h1 class="sapphire__h1">
+            Left hand <br />
+            <span class="sapphire__smallText">palm keys</span>
+          </h1>
           <p>
             Her left hand is so big she can cover my face with it. These keys
             are used to play notes in the low register.
@@ -402,7 +413,7 @@
           <i class="fa fa-asterisk fa-4x" aria-hidden="true"></i>
         </div>
       </div>
-      
+
       <!-- Paper 3 - bodyInfo -->
       <div class="sapphire__body--info">
         <div class="bodyCloseBtn">
@@ -414,6 +425,29 @@
             Her body is so fit you can see all her muscles ... Her body is so
             fit you can see all her muscles ... It amplifies the sound and
             creates the rich, warm feeling that Sapphire gives me.
+          </p>
+        </div>
+        <div class="star">
+          <i class="fa fa-asterisk fa-4x" aria-hidden="true"></i>
+        </div>
+      </div>
+
+      <!-- Paper 4 - rightHand palm keys -->
+      <div class="sapphire__rightHand--info">
+        <div class="rightHandCloseBtn">
+          <i
+            class="fa fa-times fa-3x rightHandCloseIcon"
+            aria-hidden="true"
+          ></i>
+        </div>
+        <div class="sapphire__text">
+          <h1 class="sapphire__h1">
+            Right hand <span class="sapphire__smallText">palm keys</span>
+          </h1>
+          <p>
+            Her right hand is smaller then her left hand, so she uses her right
+            hand to help me out ... We call it as
+            well her left pinky key.
           </p>
         </div>
         <div class="star">
