Add bell content and styling

--- a/index.html
+++ b/index.html
@@ -364,14 +364,16 @@
         <!-- Right hand palm keys -->
         <div class="sapphire__rightHand">
           <p>Right hand palm keys</p>
-          <span class="rightHand--click">
+          <span id="rightHand--click">
             <i class="fa fa-plus-circle fa-2x" aria-hidden="true"></i>
           </span>
         </div>
 
         <!-- Bell -->
         <div class="sapphire__bell">
-          <i class="fa fa-plus-circle fa-2x" aria-hidden="true"> </i>
+          <span class="bell--click">
+            <i class="fa fa-plus-circle fa-2x" aria-hidden="true"> </i>
+          </span>
           <p>Bell</p>
         </div>
       </section>
@@ -446,8 +448,27 @@
           </h1>
           <p>
             Her right hand is smaller then her left hand, so she uses her right
-            hand to help me out ... We call it as
-            well her left pinky key.
+            hand to help me out ... We call it as well her left pinky key.
+          </p>
+        </div>
+        <div class="star">
+          <i class="fa fa-asterisk fa-4x" aria-hidden="true"></i>
+        </div>
+      </div>
+
+      <!-- Paper 5 - Bell -->
+      <div class="sapphire__bell--info">
+        <div class="bellCloseBtn">
+          <i
+            class="fa fa-times fa-3x bellCloseIcon"
+            aria-hidden="true"
+          ></i>
+        </div>
+        <div class="sapphire__text">
+          <h1 class="sapphire__h1">Bell</h1>
+          <p>
+            Her bell is the best part of her body and the sexiest one. It has is
+            flared out, typically in a conical shape.
           </p>
         </div>
         <div class="star">
