Add content for familyMembers section

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 
         <!-- Bell -->
         <div class="sapphire__bell">
-          <span class="bell--click">
+          <span id="bell--click">
             <i class="fa fa-plus-circle fa-2x" aria-hidden="true"> </i>
           </span>
           <p>Bell</p>
@@ -459,10 +459,7 @@
       <!-- Paper 5 - Bell -->
       <div class="sapphire__bell--info">
         <div class="bellCloseBtn">
-          <i
-            class="fa fa-times fa-3x bellCloseIcon"
-            aria-hidden="true"
-          ></i>
+          <i class="fa fa-times fa-3x bellCloseIcon" aria-hidden="true"></i>
         </div>
         <div class="sapphire__text">
           <h1 class="sapphire__h1">Bell</h1>
@@ -489,6 +486,18 @@
           </p>
         </div>
         <p class="features__text">Four beautifull kids</p>
+      </section>
+
+      <!-- Members family -->
+      <section class="membersFamily">
+        <h1>Soft Soprano</h1>
+        <img src="" alt="" />
+        <p>Soprano</p>
+        <p>
+          It is the highest-pitched member of the family and is the smallest one
+          as well. Famous in Jazz & Classic music
+        </p>
+        <button class="sopranoBtn" role="button">Play Song</button>
       </section>
     </main>
     <script type="module" src="./js/main.js"></script>
