--- a/index.html
+++ b/index.html
@@ -489,15 +489,62 @@
       </section>
 
       <!-- Members family -->
-      <section class="membersFamily">
-        <h1>Soft Soprano</h1>
-        <img src="" alt="" />
-        <p>Soprano</p>
-        <p>
-          It is the highest-pitched member of the family and is the smallest one
-          as well. Famous in Jazz & Classic music
-        </p>
-        <button class="sopranoBtn" role="button">Play Song</button>
+      <section>
+        <div class="membersFamily">
+          <h1 class="membersFamily__h1">Soft Soprano</h1>
+          <img src="./assets/mobile/familyMembers/soprano-img.png" alt="" />
+          <div>
+            <p class="membersFamily__member">Soprano</p>
+            <p>
+              It is the highest-pitched member of the family and is the smallest
+              one as well. Famous in Jazz & Classic music
+            </p>
+          </div>
+          <button class="sopranoBtn" role="button">Play Song</button>
+        </div>
+
+        <!-- Alto Saxophone -->
+        <div class="membersFamily">
+          <h1 class="membersFamily__h1">Sexy Alto</h1>
+          <img src="./assets/mobile/familyMembers/alt-img.png" alt="" />
+          <div>
+            <p class="membersFamily__member">Alto</p>
+            <p>
+              It is the second highest-pitched member of the family. Slightly
+              larger bore and mouthpiec. Used in Jazz & bigbands
+            </p>
+          </div>
+          <button class="sopranoBtn" role="button">Play Song</button>
+        </div>
+
+        <!-- Tenor Saxophone -->
+        <div class="membersFamily">
+          <h1 class="membersFamily__h1">Young Tenor</h1>
+          <img src="./assets/mobile/familyMembers/tenor-img.png" alt="" />
+          <div>
+            <p class="membersFamily__member">Tenor</p>
+            <p>
+              Tenor is medium-sized. Is made of brass and has a gold- or
+              silver-plated finish. Is popular as well with jazz & big bands
+            </p>
+          </div>
+          <button class="sopranoBtn" role="button">Play Song</button>
+        </div>
+
+        <!-- Bariton Saxophone -->
+        <div class="membersFamily">
+          <h1 class="membersFamily__h1">Big g Bariton</h1>
+          <img src="./assets/mobile/familyMembers/bariton-img.png" alt="" />
+          <div>
+            <p class="membersFamily__member">Bariton</p>
+            <p>
+              Bariton is the biggest g in the family. It is known for its rich,
+              deep, and warm tone, making it a popular choice for providing a
+              foundation of sound in ensembles.
+            </p>
+          </div>
+          <button class="sopranoBtn" role="button">Play Song</button>
+        </div>
       </section>
     </main>
     <script type="module" src="./js/main.js"></script>
