Add section the concert and i styled it aswell

--- a/index.html
+++ b/index.html
@@ -546,6 +546,18 @@
           <button class="sopranoBtn" role="button">Play Song</button>
         </div>
       </section>
+      <div class="cutted__background"></div>
+
+      <!-- The concerts -->
+      <section class="concerts">
+        <p class="concerts__title">The concerts</p>
+        <p>
+          <span class="concert__qoute">"</span>The saxophonist's art is to convey emotions through a
+          soulful, rich tone concerts <span class="concert__qoute">"</span>
+        </p>
+
+        <img src="./assets/mobile/theConcerts/saxophone-player1.png" alt="" />
+      </section>
     </main>
     <script type="module" src="./js/main.js"></script>
   </body>
