--- a/index.html
+++ b/index.html
@@ -552,11 +552,31 @@
       <section class="concerts">
         <p class="concerts__title">The concerts</p>
         <p>
-          <span class="concert__qoute">"</span>The saxophonist's art is to convey emotions through a
-          soulful, rich tone concerts <span class="concert__qoute">"</span>
+          <span class="concert__qoute">"</span>The saxophonist's art is to
+          convey emotions through a soulful, rich tone concerts
+          <span class="concert__qoute">"</span>
         </p>
 
         <img src="./assets/mobile/theConcerts/saxophone-player1.png" alt="" />
+      </section>
+
+      <div class="cutted__background__up"></div>
+
+      <!-- goToConcerts -->
+      <section class="goToConcerts">
+        <p class="goToConcerts__adolpheAndSapphire">Adolphe and Sapphire</p>
+        <div class="goToConcerts__title">
+          <p>Go <span class="goToConcerts__title__small">to</span> Concerts</p>
+          <p>in their</p>
+          <p class="goToConcerts__title__freeTime">free time</p>
+        </div>
+        <p>
+          They end their days checking a performance in “Muziekinstrumenten
+          museum Brussels”
+        </p>
+        <p class="goToConcerts__join">Let’s join them!</p>
+          <i class="fa fa-arrow-down fa-2x" aria-hidden="true"></i>
+        </span>
       </section>
     </main>
     <script type="module" src="./js/main.js"></script>
