Add media queries for the section features and make it responsive for ipad and desktop

--- a/index.html
+++ b/index.html
@@ -341,23 +341,26 @@
               <p class="features__love__the">The</p>
               <p class="features__love__features">features</p>
               <p class="features__love__adolphe">Adolphe</p>
-              <img
-                loading="lazy"
-                class="loves"
-                src="./assets/mobile/features/loves.png"
-                alt=""
-              />
+              <picture>
+                <source
+                  media="(min-width: 834px)"
+                  srcset="./assets/ipad/features/loves.png"
+                />
+                <img
+                  loading="lazy"
+                  class="loves"
+                  src="./assets/mobile/features/loves.png"
+                  alt=""
+                />
+              </picture>
             </div>
-            <p class="features__text">
-              He fell in love with the soul of Sapphire, but not only the soul.
-              Also the way she looks!
-            </p>
-            <img
-              loading="lazy"
-              class="features__sapphire"
-              src="./assets/mobile/features/sapphire.png"
-              alt=""
-            />
+            <div class="features__text">
+              <p>
+                He fell in love with the soul of Sapphire, but not only the soul.
+                Also the way she looks!
+              </p>
+              <p class="features__sapphire">Sapphire</p>
+            </div>
           </section>
         </div>
 
