Add media queries to make ipad and macbook responsive. Section family

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
 
         <!-- Family -->
         <section class="family">
-          <p>A few year went by ...</p>
+          <p class="family__p">A few year went by ...</p>
           <div class="family__title">
             <p class="family__title__soThey">So they</p>
             <p class="family__title__decide">
@@ -519,7 +519,7 @@
               A <span class="span__family">Family</span>
             </p>
           </div>
-          <p class="features__text">Four beautifull kids</p>
+          <p  class="family__p">Four beautifull kids</p>
         </section>
 
         <!-- Members family -->
