Add media queries ipad and macbook for section FamilyMembers

--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@
             </div>
             <div class="features__text">
               <p>
-                He fell in love with the soul of Sapphire, but not only the soul.
-                Also the way she looks!
+                He fell in love with the soul of Sapphire, but not only the
+                soul. Also the way she looks!
               </p>
               <p class="features__sapphire">Sapphire</p>
             </div>
@@ -519,15 +519,15 @@
               A <span class="span__family">Family</span>
             </p>
           </div>
-          <p  class="family__p">Four beautifull kids</p>
+          <p class="family__p">Four beautifull kids</p>
         </section>
 
         <!-- Members family -->
-        <section>
+        <section class="membersFamily__wrapper">
           <div class="membersFamily">
             <h1 class="membersFamily__h1">Soft Soprano</h1>
             <img src="./assets/mobile/familyMembers/soprano-img.png" alt="" />
-            <div>
+            <div class="membersFamily__information">
               <p class="membersFamily__member">Soprano</p>
               <p>
                 It is the highest-pitched member of the family and is the
@@ -543,7 +543,7 @@
           <div class="membersFamily">
             <h1 class="membersFamily__h1">Sexy Alto</h1>
             <img src="./assets/mobile/familyMembers/alt-img.png" alt="" />
-            <div>
+            <div class="membersFamily__information">
               <p class="membersFamily__member">Alto</p>
               <p>
                 It is the second highest-pitched member of the family. Slightly
@@ -559,7 +559,7 @@
           <div class="membersFamily">
             <h1 class="membersFamily__h1">Young Tenor</h1>
             <img src="./assets/mobile/familyMembers/tenor-img.png" alt="" />
-            <div>
+            <div class="membersFamily__information">
               <p class="membersFamily__member">Tenor</p>
               <p>
                 Tenor is medium-sized. Is made of brass and has a gold- or
@@ -575,7 +575,7 @@
           <div class="membersFamily">
             <h1 class="membersFamily__h1">Big g Bariton</h1>
             <img src="./assets/mobile/familyMembers/bariton-img.png" alt="" />
-            <div>
+            <div class="membersFamily__information">
               <p class="membersFamily__member">Bariton</p>
               <p>
                 Bariton is the biggest g in the family. It is known for its
